[project]
name = "YA_MCPServer_Topology"
version = "0.1.0"
description = "YA MCP Server Topology"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "art>=6.5",
    "black>=25.9.0",
    "colorlog>=6.10.1",
    "httpx>=0.28.1",
    "mcp[cli]>=1.14.0",
    "neo4j>=6.1.0",
    "pyyaml>=6.0.2",
    "ruff>=0.14.4",
]
